@@ -332,6 +332,10 @@
 
       \item \code{libcurl} connections signal errors rather than
       retrieving http error pages.
+      
+      \item \code{nchar(x, "w")} assumed -1 for characters it did not
+      know about (e.g.\sspace{}zero-width spaces): it now assumes 1 (and
+      knows about zero-width characters).
     }
   }
 }
